SERVER-78860: $_internalEqHash should serialize with a NumberLong